--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,25 +28,15 @@
 {% if page.cover %}
 <meta name="twitter:image" content="{{ site.url }}/img/{{ page.cover }}" />
 <meta property="og:image" content="{{ site.url }}/img/{{ page.cover }}" />
-{% elsif page.img %}
-<meta name="twitter:image" content="{{ site.url }}/img/{{ page.img }}" />
-<meta property="og:image" content="{{ site.url }}/img/{{ page.img }}" />
-{% elsif page.vid %}
-<meta name="twitter:player" content="https://www.youtube.com/embed/{{ page.vid }}"/>
-<meta name="twitter:player:width" content="1280" />
-<meta name="twitter:player:height" content="720" />
-<meta name="twitter:image" content="https://i.ytimg.com/vi/{{ page.vid }}/maxresdefault.jpg" />
-<meta property="og:image" content="https://i.ytimg.com/vi/{{ page.vid }}/maxresdefault.jpg" />
 {% else %}
-<meta name="twitter:image" content="{{ site.url }}/img/michael.team.jpg" />
-<meta property="og:image" content="{{ site.url }}/img/michael.team.jpg" />
+<meta name="twitter:image" content="{{ site.url }}/img/adwent.jpg" />
+<meta property="og:image" content="{{ site.url }}/img/adwent.jpg" />
 {% endif %}
 <meta name="author" content="{{ site.data.main.name }}" />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:locale" content="pl" />
 <meta property="og:type" content="article" />
 <meta property="og:site_name" content="{{ site.name }}" />
-<meta name="twitter:site" content="@MSliwinski"/>
 
 <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -56,25 +46,27 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.data.main.title }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
 <link rel="icon" type="image/png" href="{{ site.avatar }}">
 
-<script src="https://hello.michael.team/script.js"></script>
-
 {% if page.js %}
 <script type="text/javascript" src="{{ site.url }}/js/scripts.js"></script>
 </head><body onload="{{ page.js }}();">
 {% else %}
 </head><body>
 {% endif %}
-<div class="begend" id="top">
-	<div class="begender">
-		<a href="{{ site.url }}/{{ langpath }}" class="avatar" title="{{ site.data.main.title }}"><img src="/icon.png" alt="MS"></a>
-		{{ site.data.main.description | markdownify }}
-	</div>
-</div>
 
 {{ content }}
 
 <div class="begend" id="footer">
-	<div class="begender center"><p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.data.main.name }}</a></p>
+	<div class="begender center">
+	<h2>{{ site.data.main.titl }}</h2>
+	<p>{{ site.data.main.des1 }}</p>
+	<p>{{ site.data.main.des2 }}</p>
+	<p>{{ site.data.main.des3 }}</p>
+	<p>{{ site.data.main.des4 }}</p>
+	{% include email.html %}
+	<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/icon.png" alt="MS"></a>
+	<h3>{{ site.data.main.dest }}</h3>
+	<p>{{ site.data.main.deso }} <a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
+	<p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/onas">{{ site.data.main.name }}</a></p>
 	</div>
 </div>
 
