Modifications to main site

--- a/_includes/email.html
+++ b/_includes/email.html
@@ -1,6 +1,6 @@
 <form action="https://nozbe.info/add_subscriber.html" accept-charset="utf-8" method="post">
 	<!-- Email field (required) -->
-	E-mail: <input type="text" name="email"/><br/>
+	<input type="text" name="email" placeholder="Podaj swój adres e-mail" /><br/>
 	<!-- List token -->
 	<!-- Get the token at: https://nozbe.info/campaign_list.html -->
 	<input type="hidden" name="campaign_token" value="fS1Lq" />
