--- a/style.scss
+++ b/style.scss
@@ -140,7 +140,7 @@ h4 {
 }
 
 .headerblack {
-	color: $textB;
+	color: $textW;//$textB;
 	@include dark-mode {
 		color: $textW;
 	}
@@ -151,7 +151,7 @@ h4 {
 		}
 	}
 	h1, h2, h3 {
-		text-shadow: 1px 1px 2px $textB;
+		text-shadow: 1px 1px 2px $textW;//$textB;
 		@include dark-mode {
 			text-shadow: 1px 1px 2px $textW;
 		}
