--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,9 @@
 	<p>{{ site.data.main.des4 }}</p>
 	{% include email.html %}
 	<small><a href="/onas/">{{ site.data.main.desp }}</a></small>
+	<br>
 	<h3>{{ site.data.main.dest }}</h3>
-	<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/icon.png" alt="MS"></a>
+	<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/img/wrsm.png" alt="WRSM"></a>
 	<p>{{ site.data.main.deso }} <a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
 	</div>
 	<div class="begender center">
