--- a/_includes/email.html
+++ b/_includes/email.html
@@ -4,8 +4,8 @@
 	<!-- List token -->
 	<!-- Get the token at: https://nozbe.info/campaign_list.html -->
 	<input type="hidden" name="campaign_token" value="fS1Lq" />
-	<!-- Thank you page (optional) -->
-	<input type="hidden" name="thankyou_url" value="https://adwentrodzinny.pl/potwierdzenie/"/>
+	<!-- Thank you page (optional)
+	<input type="hidden" name="thankyou_url" value="/potwierdzenie/"/>-->
 	<!-- Add subscriber to the follow-up sequence with a specified day (optional) -->
 	<input type="hidden" name="start_day" value="0" />
 	<!-- Forward form data to your page (optional) -->
