--- a/style.scss
+++ b/style.scss
@@ -212,7 +212,8 @@ article > nav {
 .entry {
 	padding: 0 5px 10px;
 	a {
-		text-decoration: none;
+		color: #694776;
+		text-decoration: underline;
 	}
 	p {
 		padding: 0.8em 0 0.2em;
