--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,15 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.data.main.title }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
 <link rel="icon" type="image/png" href="{{ site.avatar }}">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1KPKWJTHP5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-1KPKWJTHP5');
+</script>
+
 {% if page.js %}
 <script type="text/javascript" src="{{ site.url }}/js/scripts.js"></script>
 </head><body onload="{{ page.js }}();">
@@ -78,7 +87,7 @@
 	</div>
 	</div>
 	<div class="begender center">
-	<p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/onas">{{ site.data.main.name }}</a></p>
+	<p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.data.main.name }}</a> | <a href="{{ site.url }}/onas">{{ site.data.main.dess }}</a></p>
 	<br />
 	</div>
 </div>
