--- a/style.scss
+++ b/style.scss
@@ -85,7 +85,9 @@ a {
 }
 
 .container {
-	padding-top: 20px;
+	margin: 20px 0px;
+	border-top: 2px solid #fff;
+	border-bottom: 2px solid #fff;
 	font-size: 0.8em;
 }
 
