--- a/style.scss
+++ b/style.scss
@@ -87,7 +87,6 @@ a {
 .container {
 	margin: 20px 0px;
 	border-top: 2px solid #fff;
-	border-bottom: 2px solid #fff;
 	font-size: 0.8em;
 }
 
@@ -105,6 +104,7 @@ a {
 .right {
 	float: right;
 	width: 50%;
+	padding-bottom: 20px;
 	@include mobile {
 		float: none;
 		width: 100%;
@@ -114,7 +114,7 @@ a {
 .avatar {
 	float: left;
 	width: 75px;
-	margin: 0px 5px;
+	margin: 10px 5px;
 	img {
 		border-radius: 5px;
 	}
