--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 	<h1>{{ page.title }}</h1>
 	{% if page.subtitle %}<h2>{{ page.subtitle }}</h2>{% endif %}
 </div></header>
-<div class="entry">
+<div class="entry" id="tutaj">
 	{{ content }}
 </div>
 </article>
