--- a/_layouts/default-2.html
+++ b/_layouts/default-2.html
@@ -64,7 +64,7 @@
 
 {{ content }}
 
-<div class="begend" id="footer">
+<div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
 	<div class="begender">
 	<h2>{{ site.data.main.titl }}</h2>
 	<p>{{ site.data.main.des1 }}</p>
@@ -81,7 +81,7 @@
 		</div>
 		<div class="right">
 		<h3>{{ site.data.main.dest }}</h3>
-		<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/img/wrsm.png" alt="WRSM"></a>
+		<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/img/wrsm-logo.png" alt="WRSM"></a>
 		<p>{{ site.data.main.deso }}<br><a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
 		</div>
 	</div>
