index with email

--- a/_layouts/default-2.html
+++ b/_layouts/default-2.html
@@ -65,7 +65,7 @@
 {{ content }}
 
 <div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
-	<div class="begender">
+	<div class="begender" style="background-color: rgba(0, 0, 0, 0.5);">
 	<h2>{{ site.data.main.titl }}</h2>
 	<p>{{ site.data.main.des1 }}</p>
 	<p>{{ site.data.main.des2 }}</p>
