--- a/_layouts/default-2.html
+++ b/_layouts/default-2.html
@@ -85,6 +85,7 @@
 		<p>{{ site.data.main.deso }}<br><a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
 		</div>
 	</div>
+	<br clear="all" />
 	</div>
 	<div class="begender center">
 	<p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.data.main.name }}</a> | <a href="{{ site.url }}/onas">{{ site.data.main.dess }}</a></p>
