--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,8 @@
 
 {{ content }}
 
-<div class="begend" id="footer">
-	<div class="begender">
+<div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
+	<div class="begender" style="background-color: rgba(0, 0, 0, 0.5);">
 	<h2>{{ site.data.main.titl }}</h2>
 	<p>{{ site.data.main.des1 }}</p>
 	<p>{{ site.data.main.des2 }}</p>
@@ -81,10 +81,11 @@
 		</div>
 		<div class="right">
 		<h3>{{ site.data.main.dest }}</h3>
-		<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/img/wrsm.png" alt="WRSM"></a>
+		<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/img/wrsm-logo.png" alt="WRSM"></a>
 		<p>{{ site.data.main.deso }}<br><a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
 		</div>
 	</div>
+	<br clear="all" />
 	</div>
 	<div class="begender center">
 	<p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.data.main.name }}</a> | <a href="{{ site.url }}/onas">{{ site.data.main.dess }}</a></p>
