--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,8 +11,8 @@ $mainBack: #33066d;//#f9faff;
 $mainD: #cca3ff;//#6c9efd; 
 $mainDDim: #cca3ff99;//#6c9efd99;
 $mainDBack: #33066d;//#080c1e;
-$back: #190332;//#fff;
-$backD: #190332;//#000; //#190332
+$back: #130924;//#190332;//#fff;
+$backD: #130924;//#190332;//#000; //#190332
 $text: #eee;//#333;
 $textD: #eee;
 $textG: #666;
