--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<article class="page" id="page">
+<article class="page" id="page" id="tutaj">
 <header style="background: url('{{ site.url }}/img/{{ site.data.main.header }}') center center / cover no-repeat; min-height: 400px;"><div class="header">
 	<h1>{{ page.title }}</h1>
 	{% if page.subtitle %}<h2>{{ page.subtitle }}</h2>{% endif %}
 </div></header>
-<div class="entry" id="tutaj">
+<div class="entry">
 	{{ content }}
 </div>
 </article>
