--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="post">
-<header style="background: url('{{ site.url }}/img/{{ site.data.main.header }}') center center / cover no-repeat; min-height: 400px;"><div class="header">
+<header><div class="header">
 	<h1>{{ page.title }}</h1>
 	{% include lang.date.html date=page.date %}
 	<h2>{{ langdate }}</h2>
