--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="post">
-<header><div class="header">
+<header><div class="headerblack">
 	<h1>{{ page.title }}</h1>
 	{% include lang.date.html date=page.date %}
 	<h2>{{ langdate }}</h2>
