--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,8 @@
 </head><body>
 {% endif %}
 
+<header style="background: url('{{ site.url }}/img/adwent-rodzinny-banner.jpg') center center / cover no-repeat; min-height: 300px;"><div class="header"></div></header>
+
 {{ content }}
 
 <div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
