--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,11 +3,10 @@ layout: default
 ---
 
 <article class="page" id="page">
-<header style="background: url('{{ site.url }}/img/{{ site.data.main.header }}') center center / cover no-repeat; min-height: 400px;"><div class="header">
+<header><div class="headerblack">
 	<h1>{{ page.title }}</h1>
 	{% if page.subtitle %}<h2>{{ page.subtitle }}</h2>{% endif %}
 </div></header>
-<div id="tutaj"></div>
 <div class="entry">
 	{{ content }}
 </div>
