fix footer links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,7 @@
 	<p>{{ site.data.main.des2 }}</p>
 	<p>{{ site.data.main.des3 }}</p>
 	<p>{{ site.data.main.des4 }}</p>
-	<p>Zacznij od wydrukowania [kolorowanki adwentowej](/kolorowanka) i skomponowania [wieńca adwentowego](/wieniec).</p>
-	
+	<p>{{ site.data.main.des5 | markdownify }}</p>
 	
 	<div class="container">
 		<div class="left">
