--- a/style.scss
+++ b/style.scss
@@ -139,23 +139,23 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
 	font-size: 3em;
-	margin: 0.8em 0 0.4em;
+	margin: 0.5em 0 0.2em;//margin: 0.8em 0 0.4em;
 }
 
 h2 {
 	font-size: 2em;
-	margin: 0.6em 0 0.3em;
+	margin: 0.4em 0 0.1em;//margin: 0.6em 0 0.3em;
 }
 
 h3 {
 	font-size: 1.5em;
-	margin: 0.4em 0 0.1em;
+	margin: 0.3em 0 0.1em;//margin: 0.4em 0 0.1em;
 }
 
 h4 {
 	font-size: 1.3em;
 	color: $textG;
-	margin: 0.3em 0 0.1em;
+	margin: 0.2em 0 0.1em;//margin: 0.3em 0 0.1em;
 }
 
 .header {
