--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,21 @@ layout: default
 <div class="entry">
 	{{ content }}
 </div>
-
+<div id="komentarze">
+	<div id="disqus_thread"></div>
+	<script>
+	/*
+	var disqus_config = function () {
+	this.page.url = '{{ site.url }}';
+	this.page.identifier = '{{ page.url}}';
+	};
+	*/
+	(function() { // DON'T EDIT BELOW THIS LINE
+	var d = document, s = d.createElement('script');
+	s.src = 'https://adwentrodzinny-pl.disqus.com/embed.js';
+	s.setAttribute('data-timestamp', +new Date());
+	(d.head || d.body).appendChild(s);
+	})();
+	</script>
+</div>
 </article>
