--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <div class="entry">
 	{{ content }}
 </div>
-<div id="komentarze">
+<div id="komentarze" class="entry">
 	<div id="disqus_thread"></div>
 	<script>
 	/*
