--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,20 +12,8 @@ layout: default
 	{{ content }}
 </div>
 <div id="komentarze" class="entry">
-	<div id="disqus_thread"></div>
-	<script>
-	/*
-	var disqus_config = function () {
-	this.page.url = '{{ site.url }}';
-	this.page.identifier = '{{ page.url}}';
-	};
-	*/
-	(function() { // DON'T EDIT BELOW THIS LINE
-	var d = document, s = d.createElement('script');
-	s.src = 'https://adwentrodzinny-pl.disqus.com/embed.js';
-	s.setAttribute('data-timestamp', +new Date());
-	(d.head || d.body).appendChild(s);
-	})();
-	</script>
+	<div id="disqus_thread">
+		<a href="javascript:disqus();">Zobacz komentarze / Dodaj komentarz</a>
+	</div>
 </div>
 </article>
