--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@ layout: default
 <div id="komentarze" class="entry">
 	<div id="disqus_thread">
 		<a href="javascript:disqus();">Zobacz komentarze / Dodaj komentarz</a>
+		<button id="show-comments" onclick="disqus();return false;">Zobacz komentarze / Dodaj komentarz</button>
 	</div>
 </div>
 </article>
