--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,4 +10,9 @@ layout: default
 <div class="entry">
 	{{ content }}
 </div>
+<div id="komentarze" class="entry">
+	<div id="disqus_thread">
+		<button id="show-comments" onclick="disqus();return false;">Zobacz komentarze / Dodaj komentarz</button>
+	</div>
+</div>
 </article>
