--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,7 +18,7 @@ $textD: #eee;
 $textG: #666;
 $textW: #fff;
 $textB: #000;
-$block: #545454;
+$block: #eaeaea;//#545454;
 $blockBack: #dcdcdc;
 $blockD: #b5b5b5;
 $blockDBack: #353535;
