fix quotes black

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,7 +20,7 @@ $textW: #fff;
 $textB: #000;
 $block: #eaeaea;//#545454;
 $blockBack: #dcdcdc;
-$blockD: #b5b5b5;
+$blockD: #eaeaea;//#b5b5b5;
 $blockDBack: #353535;
 
 //bg: #190332
