--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 <meta name="twitter:image" content="{{ site.url }}/img/{{ page.cover }}" />
 <meta property="og:image" content="{{ site.url }}/img/{{ page.cover }}" />
 {% else %}
-<meta name="twitter:image" content="{{ site.url }}/img/adwent.jpg" />
-<meta property="og:image" content="{{ site.url }}/img/adwent.jpg" />
+<meta name="twitter:image" content="{{ site.url }}/img/adwent-2021.jpg" />
+<meta property="og:image" content="{{ site.url }}/img/adwent-2021.jpg" />
 {% endif %}
 <meta name="author" content="{{ site.data.main.name }}" />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
