--- a/_includes/list.html
+++ b/_includes/list.html
@@ -1,10 +1,13 @@
+## Test
+
+<strong>Strong</strong>
 
 {% for post in include.posts %}
-	{% assign postyear = post.date | date: "%Y" %}
-	{% if postyear == include.year %}
-		<h2 id="{{ post.url | remove: '/' }}"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-		{% include lang.date.html date=post.date %}
-		<h3>{{ langdate }}</h3>
-		<br />
-	{% endif %}
+{% assign postyear = post.date | date: "%Y" %}
+{% if postyear == include.year %}
+<h2 id="{{ post.url | remove: '/' }}"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+{% include lang.date.html date=post.date %}
+<h3>{{ langdate }}</h3>
+<br />
+{% endif %}
 {% endfor %}
