--- a/_includes/list.html
+++ b/_includes/list.html
@@ -3,7 +3,7 @@
  {% if postyear == include.year %}
   {% include lang.date.html date=post.date %}
   <h4>{{ langdate }}</h4>
-  <h2 id="{{ post.url | remove: '/' }}"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  <h2 id="{{ post.url | remove: '/' }}">{{ post.title }}</h2>
   <br />
  {% endif %}
 {% endfor %}
