--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,10 @@
 
 <div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
 	<div class="begender">
+{% if page.test %}
+<h2>Chcesz dostawać powiadomienia codziennie na maila?</h2>
+{% include email.html %}
+{% endif %}
 	<h2>{{ site.data.main.titl }}</h2>
 	<p>{{ site.data.main.des1 | markdownify }}</p>
 	<p>{{ site.data.main.des2 | markdownify }}</p>
