--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,8 +66,12 @@
 <div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
 	<div class="begender">
 {% if page.test %}
-<h2>Chcesz dostawać powiadomienia codziennie na maila?</h2>
+<h2>Powiadomienia o aktywnościach codziennie na maila?</h2>
 {% include email.html %}
+<small><a href="/onas/">{{ site.data.main.desp }}</a></small>
+<p>Chcesz wiedzieć więcej?</p>
+<h3><a href="/lista/">Lista wszystkich aktywności na adwent 2024</a></h3>
+<h3><a href="/wieniec/">Wieniec Adwentowy - jak przygotować?</a></h3>
 {% endif %}
 	<h2>{{ site.data.main.titl }}</h2>
 	<p>{{ site.data.main.des1 | markdownify }}</p>
