--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,14 +65,13 @@
 
 <div class="begend" id="footer" style="background: url('{{ site.url }}/img/adwent-tlo.png') center center / cover no-repeat;">
 	<div class="begender">
-{% if page.test %}
-<h2>Chcesz powiadomienia codziennie na maila?</h2>
-<p>Zapisz się (<a href="/onas/">nie spamujemy🙂</a>)<p>
+{% if page.test %}Zapraszamy do wspólnej rodzinnej zabawy!{% endif %}
+<h2>Chcesz powiadomienia codziennie na e-maila?</h2>
+<p>Zapisz się (<a href="/onas/">wysyłamy TYLKO powiadomienia adwentowe</a>🙂)<p>
 {% include email.html %}
 <p>Chcesz wiedzieć więcej?</p>
 <h3><a href="/lista/">Pełna lista wszystkich aktywności na Adwent 2024</a></h3>
 <h3><a href="/wieniec/">Wieniec Adwentowy - jak przygotować?</a></h3>
-{% endif %}
 	<h2>{{ site.data.main.titl }}</h2>
 	<p>{{ site.data.main.des1 | markdownify }}</p>
 	<p>{{ site.data.main.des2 | markdownify }}</p>
