fix footer and day 1 fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
 		<div class="right">
 		<h3>{{ site.data.main.dest }}</h3>
 		<a href="{{ site.data.main.fb }}" class="avatar" title="{{ site.data.main.title }}"><img src="/img/wrsmlogo.png" alt="WRSM"></a>
-		<p>{{ site.data.main.deso }}<br><a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
+		<p>{{ site.data.main.deso | markdownify }}<br><a href="{{ site.data.main.fb }}">{{ site.data.main.desf }}</a></p>
 		</div>
 	</div>
 	</div>
